# spectool

./: .gitignore  README.md
.claude/: settings.local.json
.claude/skills/shared/: acsl_fewshot.md  hoare_rules.md
.claude/skills/spec-acsl/: SKILL.md
.claude/skills/spec-analyze/: SKILL.md
.claude/skills/spec-bottomup/: SKILL.md
.claude/skills/spec-nl/: SKILL.md
.claude/skills/spec-pipeline/: SKILL.md
.claude/skills/spec-repair/: SKILL.md
.claude/skills/spec-term/: SKILL.md
FM-Agent/md/: system_prompt.md  workflow_spec_step1_layers.md  workflow_spec_step4_batch.md
FM-Agent/src/: extract.py  file_utils.py  generate_batch_prompts.py  generate_topdown_layers.py  parser.py  run_batch_gen.py
autospec+/: .gitignore  README.md  requirements.txt
autospec+/LLM4Veri/: SpecLoC.txt  a.out  auto_run.py  inter_modular_run.py  main.py  mark.py
autospec+/clang+llvm/: README.md
autospec+/config/: models_config.yaml
autospec+/utils/: qwencore.py
benchmark/: RUNBOOK.md
docs/: design.md
output/autobench_v2/: report.md  results.csv  results.jsonl
output/autobench_v2/1/: 1.acsl.c  (+1 more)
output/live24/: report.md  results.csv  results.jsonl
output/live25/: report.md  results.csv  results.jsonl
scripts/: autobench_v2_admit.txt  autobench_v2_report.md  count_admit.py  live24_admit.txt  live24_report.md  live25_admit.txt  live25_report.md  summary_report.md
spectool/: .gitignore  SKILL.md  pyproject.toml  requirements.txt
spectool/spectool/: state.py
spectool/spectool/commands/: analyze.py  contracts.py  parse_spec.py  split_blocks.py  state.py  variant.py
(+16871 files in other folders)
